--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </script>
   <script src="module-4/SpeakHello.js"></script>
   <script src="module-4/SpeakGoodBye.js"></script>
-  <script src="module-4/script.js"></script>
-</head>
+  <script src="module-4/script.js"></script></head>
 <body>
   <h1>Module 4 Solution Starter</h1>
-  <p>Inspect the page and see the output on console.</p>
+  <p>Inspect the page and view the output on console.</p>
 </body>
 </html>
+
+
+  
