--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   </footer>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="module-5/js/jquery-2.1.4.min.js"></script>
-  <script src="module-5/js/bootstrap.min.js"></script>
-  <script src="module-5/js/ajax-utils.js"></script>
-  <script src="module-5/js/script.js"></script>
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/ajax-utils.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
